<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_blue1"
    tools:context=".fragment_Ticket_Payment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/border_view_with_stroke"
            android:orientation="horizontal"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/txt_amount_payable"
                android:textColor="@color/black1"
                android:textSize="14sp" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/paymentAmount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_medium"
                android:text="@string/txt_amount_payable1"
                android:textColor="@color/black1"
                android:textSize="14sp" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="30dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/txt_payment_method"
            android:textColor="@color/black1"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/txt_upi"
            android:textColor="@color/black1"
            android:textSize="14sp" />

        <GridLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="5">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_google_pay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/txt_google_pay"
                android:textColor="@color/black1"
                app:buttonTint="@color/black1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_phone_pe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="50dp"
                android:text="@string/txt_phone_pe"
                android:textColor="@color/black1"
                app:buttonTint="@color/black1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_paytm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:text="@string/txt_pay_tm"
                android:textColor="@color/black1"
                app:buttonTint="@color/black1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_other_upi"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_marginStart="50dp"
                android:text="@string/txt_others"
                android:textColor="@color/black1"
                app:buttonTint="@color/black1" />
        </GridLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/montserrat_medium"
            android:text="@string/txt_cards"
            android:textColor="@color/black1"
            android:textSize="14sp" />

        <GridLayout
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:columnCount="2"
            android:rowCount="1">

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_debit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:text="@string/txt_debit_card"
                android:textColor="@color/black1"
                app:buttonTint="@color/black1" />

            <com.google.android.material.radiobutton.MaterialRadioButton
                android:id="@+id/radio_btn_credit_card"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_marginStart="50dp"
                android:text="@string/txt_credit_card"
                android:textColor="@color/black1"
                app:buttonTint="@color/black1" />
        </GridLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_gravity="center"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_confirm"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|center"
            android:layout_margin="30dp"
            android:backgroundTint="@color/teal1"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/txt_confirm"
            android:textColor="@color/white1"
            android:textSize="18sp"
            app:cornerRadius="10dp" />

    </LinearLayout>

</ScrollView>