<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/main_faq"
    android:background="@color/teal1"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:contentDescription="@string/txt_faq"
        android:src="@drawable/ill_faq" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/border_views"
        android:scrollbarSize="2dp"
        android:layout_marginTop="5dp"
        android:scrollbarStyle="insideOverlay"
        android:scrollbars="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/txt_faq_full"
                android:textColor="@color/black1"
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_view_with_stroke"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/txt_q1"
                    android:textColor="@color/black1"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:justificationMode="inter_word"
                    android:text="@string/txt_a1"
                    android:textColor="@color/black1"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_view_with_stroke"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/txt_q2"
                    android:textColor="@color/black1"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:justificationMode="inter_word"
                    android:text="@string/txt_a2"
                    android:textColor="@color/black1"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_view_with_stroke"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/txt_q3"
                    android:textColor="@color/black1"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:justificationMode="inter_word"
                    android:text="@string/txt_a3"
                    android:textColor="@color/black1"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_view_with_stroke"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/txt_q4"
                    android:textColor="@color/black1"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:justificationMode="inter_word"
                    android:text="@string/txt_a4"
                    android:textColor="@color/black1"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/border_view_with_stroke"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/montserrat_medium"
                    android:text="@string/txt_q5"
                    android:textColor="@color/black1"
                    android:textSize="15sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:fontFamily="@font/montserrat"
                    android:justificationMode="inter_word"
                    android:text="@string/txt_a5"
                    android:textColor="@color/black1"
                    android:textSize="14sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>