<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_margin="20dp"
        android:src="@drawable/icon_no_internet"
        android:contentDescription="@string/txt_idk"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/txt_no_internet_connection"
        android:textSize="18sp"
        android:textColor="@color/black1"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|center"
        android:layout_marginBottom="20dp"
        android:fontFamily="@font/montserrat_medium"
        android:text="@string/txt_check_your_connection"
        android:textSize="14sp"
        android:textColor="@color/black1"/>
</LinearLayout>